objects/SBQQ__ProductOption__c.object
<CustomObject>
    <fields>
        <fullName>CPQ_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CPQ_License_Agreement_Name_c__c</fullName>
        <label>CPQ_License_Agreement_Name__c</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SaaS</fullName>
                </value>
                <value>
                    <fullName>PE + IFX</fullName>
                </value>
                <value>
                    <fullName>PE</fullName>
                </value>
                <value>
                    <fullName>Cloud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPQ_License_Type_Attribute__c</fullName>
        <description>Stores the license type for use with configuration attributes.</description>
        <inlineHelpText>Stores the license type for use with configuration attributes.</inlineHelpText>
        <label>License Type Filter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Perpetual</fullName>
                </value>
                <value>
                    <fullName>Term</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>SaaS</fullName>
                </value>
                <value>
                    <fullName>PaaS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPQ_License_Type__c</fullName>
        <formula>SBQQ__OptionalSKU__r.License_Type_INF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Pricing_Model_Attribute__c</fullName>
        <label>Pricing Model Filter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Named User</fullName>
                </value>
                <value>
                    <fullName>Renewals Only</fullName>
                </value>
                <value>
                    <fullName>Site</fullName>
                </value>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Bundle</fullName>
                </value>
                <value>
                    <fullName>Concurrent</fullName>
                </value>
                <value>
                    <fullName>Instance</fullName>
                </value>
                <value>
                    <fullName>Module</fullName>
                </value>
                <value>
                    <fullName>Personal subscription</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Special</fullName>
                </value>
                <value>
                    <fullName>Study</fullName>
                </value>
                <value>
                    <fullName>TIBCO Included</fullName>
                </value>
                <value>
                    <fullName>TIBCO Not Included</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPQ_Quantity_Controlled_By_Parent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ensures that the option&apos;s quantity matches that of the parent (i.e. configured SKU) quantity. Used with quote calculator plugin.</description>
        <inlineHelpText>Ensures that the option&apos;s quantity matches that of the parent (i.e. configured SKU) quantity. Used with quote calculator plugin.</inlineHelpText>
        <label>Quantity Controlled By Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Reminder__c</fullName>
        <description>Adds a reminder message that appears during product configuration.</description>
        <inlineHelpText>Adds a reminder message that appears during product configuration.</inlineHelpText>
        <label>Reminder</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CPQ_Unit_of_Measure__c</fullName>
        <description>Used to filter products within bundles via configuration attribute.</description>
        <label>Pricing Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Named User</fullName>
                </value>
                <value>
                    <fullName>Instance</fullName>
                </value>
                <value>
                    <fullName>Site</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>